[package]
name = "rustflut"
version = "0.1.0"
authors = ["Borgel <iborgel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rflut-srv"
path = "src/rustflut-srv/main.rs"

[[bin]]
name = "rflut-play"
path = "src/rustflut-play/main.rs"

[dependencies]

